--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <header id="masthead">
     <div class="container">
-      <a href="index.html" id="logo">Your Name</a>
+      <a href="index.html" id="logo">Hoang Pham</a>
       <nav>
         <a href="index.html">About</a>
         <a href="portfolio.html">Portfolio</a>
@@ -25,11 +25,11 @@
     <section class="main-section">
       <h1>About Me</h1>
 
-      <img src="assets/images/cat.jpg" class="auth-image" alt="Your Name">
+      <img src="assets/images/me.jpg" class="auth-image" alt="Your Name">
 
-      <p>Marshmallow jelly souffl&eacute; pastry biscuit gummi bears tootsie roll tootsie roll gingerbread. Cotton candy muffin gingerbread fruitcake. Sweet roll souffl&eacute; topping wafer croissant oat cake gummi&nbsp;bears.</p>
+      <p></p>
 
-      <p>Jelly-o cheesecake dessert fruitcake ice cream brownie liquorice souffl&eacute;. Caramels biscuit gummi bears tiramisu chupa chups. Croissant macaroon cotton candy cake pudding.</p>
+      <p></p>
 
     </section>
 
@@ -46,7 +46,7 @@
 
   <footer>
     <div class="container">
-      Copyright &copy; 2016 Your Name
+      Copyright &copy; 2017 Hoang Pham
     </div>
   </footer>
 </body>
