--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <title>About | Your Name</title>
   <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
 </head>
 
 <body>
@@ -27,9 +29,9 @@
 
       <img src="assets/images/me.jpg" class="auth-image" alt="Your Name">
 
-      <p></p>
+      <p>Hey there! My name is Hoang, I'm a visual jack-of-all trades from San Diego. This means I cover photography, videography, graphic design and (soon) full-stack web development. I am currently working full time as what is effectively a one-man art department at a local company called WeckMethod.</p>
 
-      <p></p>
+      <p>I'm open to freelance inquiries, feel free to contact me for all your visual asset creation needs!</p>
 
     </section>
 
@@ -45,7 +47,7 @@
   </div>
 
   <footer>
-    <div class="container">
+    <div>
       Copyright &copy; 2017 Hoang Pham
     </div>
   </footer>
