--- a/portfolio.html
+++ b/portfolio.html
@@ -6,6 +6,8 @@
   <title>Portfolio | Your Name</title>
   <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
 </head>
 
 <body>
@@ -65,7 +67,7 @@
   </div>
 
   <footer>
-    <div class="container">
+    <div>
       Copyright &copy; 2017 Hoang Pham
     </div>
   </footer>
