fix alt tag in pic

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <section class="main-section">
       <h1>About Me</h1>
 
-      <img src="assets/images/me.jpg" class="auth-image" alt="Your Name">
+      <img src="assets/images/me.jpg" class="auth-image" alt="Hoang Pham">
 
       <p>Hey there! My name is Hoang, I'm a visual jack-of-all trades from San Diego. This means I cover photography, videography, graphic design and (soon) full-stack web development. I am currently working full time as what is effectively a one-man art department at a local company called WeckMethod.</p>
 
